--- a/destinations.html
+++ b/destinations.html
@@ -155,7 +155,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="destination-places-grids">
 						<div class="destination-places-grid" onclick="location.href='#';">
 							<div class="dest-place-pic main_box user_style4" data-hipop="two-horizontal">
-								<img src="images/museum.JPG" height="180" width="340" title="Singapore Museum" />
+								<img src="images/museum1.jpg" height="180" width="340" title="Singapore Museum" />
 								<a href="#" class="popup"> </a>
 								<a href="#" class="popup2"> </a>
 							</div>
